Bakcground fetch implemented but not working?

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,6 +7,7 @@
 </ion-header>
 
 <ion-content padding>
+  <h1 *ngIf="fetched">Fetch has fired</h1>
   <!-- <ion-img src='./www/assets/imgs/logo.jpg'></ion-img>
   <ion-img src='../assets/imgs/logo.png'></ion-img>
   <img src="./www/assets/imgs/logo.png">
