Adding ionic storage

--- a/src/pages/add-report/add-report.html
+++ b/src/pages/add-report/add-report.html
@@ -111,7 +111,7 @@
 
     <ion-item>
         
-        <ion-textarea formControlName='note' custom-maxlength [charMaxLength]="5" rows="6" cols="20" type="text" placeholder="Enter any notes here..."   [(ngModel)]="note"></ion-textarea>
+        <ion-textarea formControlName='note' custom-maxlength [charMaxLength]="5" rows="6" cols="20" type="text" placeholder="Enter any notes here..."   ></ion-textarea>
      </ion-item>
 
 
