Previous reports are listed, testerId pre filled

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -19,5 +19,6 @@
   <img src='../../assets/imgs/logo.png'> -->
   <!-- <img src="../assets/imgs/logo.jpg"> -->
   <button class="largeButton" ion-button full margin-bottom (click)='goToAddReport()'>Submit report</button>
+  <button class="previousButton" ion-button full margin-bottom (click)='goToPreviousReports()'>Previous reports</button>
   <button class="secondLargeButton" ion-button full margin15-top (click)='goToParlourType()'>Parlor requirements</button>
 </ion-content>
