Managed to export an exe

--- a/src/pages/parlour-type/parlour-type.html
+++ b/src/pages/parlour-type/parlour-type.html
@@ -13,8 +13,10 @@
   <ion-item>
       <ion-label>Parlour type</ion-label>
       <ion-select [(ngModel)]="parlourType">
-        <ion-option value="milkline">Milkline</ion-option>
-        <ion-option value="recordingJar">Recording jar</ion-option>
+        <ion-option value="midi-level-milkline">Midi-level Milkline, 2 stalls/unit </ion-option>
+        <ion-option value="midi-level-recordingJar">Midi level Recording jar, 2 stalls/unit</ion-option>
+        <ion-option value="doubleUp-low-level-milkline">Double up Low level milkline, 1 stall/unit</ion-option>
+        
       </ion-select>
   </ion-item>
 
