--- a/src/pages/parlour-type/parlour-type.html
+++ b/src/pages/parlour-type/parlour-type.html
@@ -16,6 +16,8 @@
         <ion-option value="midi-level-milkline">Midi-level Milkline, 2 stalls/unit </ion-option>
         <ion-option value="midi-level-recordingJar">Midi level Recording jar, 2 stalls/unit</ion-option>
         <ion-option value="doubleUp-low-level-milkline">Double up Low level milkline, 1 stall/unit</ion-option>
+        <ion-option value="doubleUp-midi-level-milkline">Double up Midi-level milkline, 1 stall/unit</ion-option>
+        <ion-option value="doubleUp-midi-level-recordingJar">Double up Midi-level Recording jar, 1 stall/unit</ion-option>
         
       </ion-select>
   </ion-item>
