Spaced buttons properly on home page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,7 +13,7 @@
  
   <img class="mainLogo" src="assets/imgs/IMQCS-logo-256.png">
   
-  <button class="largeButton" ion-button full margin-bottom (click)='goToAddReport()'>Submit report</button>
-  <button class="previousButton" ion-button full margin-bottom (click)='goToPreviousReports()'>Previous reports</button>
+  <button class="submitReport" ion-button full margin-bottom (click)='goToAddReport()'>Submit report</button>
+  <button class="previousReport" ion-button full margin-bottom (click)='goToPreviousReports()'>Previous reports</button>
   <button class="secondLargeButton" ion-button full margin15-top (click)='goToParlourType()'>Parlor requirements</button>
 </ion-content>
