New icon added to android

--- a/src/pages/add-report/add-report.html
+++ b/src/pages/add-report/add-report.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Submit details</ion-title>
+    <ion-title>Submit report</ion-title>
   </ion-navbar>
 
 </ion-header>
