--- a/src/pages/previous-reports/previous-reports.html
+++ b/src/pages/previous-reports/previous-reports.html
@@ -15,11 +15,11 @@
 
 <ion-content>
 
-    <ion-list *ngFor="let report of previousReports">
+    <ion-list class="previousReport" *ngFor="let report of previousReports">
   
-          <ion-list-header>
+          <!-- <ion-list-header>
           
-          </ion-list-header>
+          </ion-list-header> -->
           
           <ion-item>
             <ion-label><strong>Test date: </strong> {{report.testDate}}</ion-label>
