Butons moved to a component

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      IMQCS
+      Milk Quality Ireland
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -13,7 +13,9 @@
  
   <img class="mainLogo" src="assets/imgs/IMQCS-logo-256.png">
   
-  <button class="submitReport" ion-button full margin-bottom (click)='goToAddReport()'>Submit report</button>
+    <menu></menu>
+  <!-- <button class="submitReport" ion-button full margin-bottom (click)='goToAddReport()'>Submit report</button>
   <button class="previousReport" ion-button full margin-bottom (click)='goToPreviousReports()'>Previous reports</button>
-  <button class="secondLargeButton" ion-button full margin15-top (click)='goToParlourType()'>Parlor requirements</button>
+  <button class="secondLargeButton" ion-button full margin15-top (click)='goToParlourType()'>Parlor requirements</button> -->
+
 </ion-content>
