Moved background fetch code to app.module

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Milk Quality Ireland
+      IMQCS
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -13,7 +13,7 @@
  
   <img class="mainLogo" src="assets/imgs/IMQCS-logo-256.png">
   
-    <menu></menu>
+  <menu></menu>
   <!-- <button class="submitReport" ion-button full margin-bottom (click)='goToAddReport()'>Submit report</button>
   <button class="previousReport" ion-button full margin-bottom (click)='goToPreviousReports()'>Previous reports</button>
   <button class="secondLargeButton" ion-button full margin15-top (click)='goToParlourType()'>Parlor requirements</button> -->
