--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,6 +12,8 @@
   <!-- This is assets within the src folder -->
  
   <img class="mainLogo" src="assets/imgs/IMQCS-logo-256.png">
+
+  <h1>Update has worked</h1>
   
   <menu></menu>
   <!-- <button class="submitReport" ion-button full margin-bottom (click)='goToAddReport()'>Submit report</button>
