--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,7 +13,7 @@
  
   <img class="mainLogo" src="assets/imgs/IMQCS-logo-256.png">
 
-  <h1>Change on beta channel?</h1>
+  <!-- <h1>Change on beta channel?</h1> -->
   
   <menu></menu>
   <!-- <button class="submitReport" ion-button full margin-bottom (click)='goToAddReport()'>Submit report</button>
