Testing push to amadeus

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,9 +11,11 @@
 
   <!-- This is assets within the src folder -->
  
-  <img class="mainLogo" src="assets/imgs/IMQCS-logo-256.png">
+  <!-- <img class="mainLogo" src="assets/imgs/IMQCS-logo-256.png"> -->
 
-  <!-- <h1>Change on beta channel?</h1> -->
+
+  <img class="mainLogo" src="https://scoresaber.com/imports/images/songs/B6F854D0984F1841F8E5F0CD15B112118A4D456C.png">
+  <h1>FREEDOM</h1>
   
   <menu></menu>
   <!-- <button class="submitReport" ion-button full margin-bottom (click)='goToAddReport()'>Submit report</button>
