FIRST BETA VERSION
"CHANNEL_NAME": "Beta",
"UPDATE_METHOD": "background"
IMQCSbeta Firebase

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,14 +7,15 @@
 </ion-header>
 
 <ion-content padding>
-  <h1 *ngIf="fetched">Fetch has fired</h1>
+
+  <!-- PREPARED FOR BETA -->
+
+  <!-- <h1 *ngIf="fetched">Fetch has fired</h1> -->
 
   <!-- This is assets within the src folder -->
  
   <img class="mainLogo" src="assets/imgs/IMQCS-logo-256.png">
 
-
   <menu></menu>
   
-
 </ion-content>
