Rating gets to firebase, works on phone

--- a/src/pages/add-report/add-report.html
+++ b/src/pages/add-report/add-report.html
@@ -106,7 +106,7 @@
       </ionic-selectable> -->
 
       <ion-label >
-          Condition
+          Rating
       </ion-label>
 
       <!-- <input class="form-check-input" type="radio" value="dog" [(ngModel)]="theCondition" required [ngModelOptions]="{standalone: true}" name="gob" value="Pass" [checked]="true" /> PAss -->
