--- a/src/pages/previous-reports/previous-reports.html
+++ b/src/pages/previous-reports/previous-reports.html
@@ -1,9 +1,4 @@
-<!--
-  Generated template for the PreviousReportsPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -16,7 +11,7 @@
 
   <ion-searchbar
     [formControl]="searchControl"
-    (ionChange)="onSearchInput()" (ionClear)="resetOpen()" [(ngModel)]="searchTerm" *ngIf="dataLoaded"
+    (ionChange)="onSearchInput()"  [(ngModel)]="searchTerm" *ngIf="dataLoaded"
   ></ion-searchbar>
 
   <p class="nodata" *ngIf="!dataLoaded">Empty</p>
