Updated version to 0.0.3

--- a/src/pages/add-report/add-report.html
+++ b/src/pages/add-report/add-report.html
@@ -26,7 +26,7 @@
       </ion-item>
 
       <div style="color: red; padding-top: 0.2rem" *ngIf="!reportForm.controls.testerNo.valid && reportForm.controls.testerNo.dirty" class="validator-error">
-      Please enter a valid tester no.
+      Please enter a valid Tester no.
       </div>
   
       <ion-label>
@@ -47,7 +47,7 @@
       </ion-item>
 
       <div style="color: red; padding-top: 0.2rem" *ngIf="!reportForm.controls.reportNo.valid && reportForm.controls.reportNo.dirty" class="validator-error">
-        Please enter a valid tester no.
+        Please enter a valid Report no.
       </div>
   
       <ion-label>
@@ -59,7 +59,7 @@
       </ion-item>
 
       <div style="color: red; padding-top: 0.2rem" *ngIf="!reportForm.controls.stickerNo.valid && reportForm.controls.stickerNo.dirty" class="validator-error">
-        Please enter a valid tester no.
+        Please enter a valid Sticker no.
       </div>
 
       <ion-label>
@@ -71,7 +71,7 @@
       </ion-item>
 
       <div style="color: red; padding-top: 0.2rem" *ngIf="!reportForm.controls.farmID.valid && reportForm.controls.farmID.dirty" class="validator-error">
-        Please enter a valid tester no.
+        Please enter a valid farm ID
       </div>
 
       <ion-label>
