Testing branch switching

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -18,6 +18,8 @@
  
   <img class="mainLogo" src="assets/imgs/IMQCS-logo-256.png">
 
+  <!-- This is the menu component -->
+
   <menu></menu>
   
 </ion-content>
