Sign up, Login, Signout WORKS!

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -21,5 +21,10 @@
   <!-- This is the menu component -->
 
   <menu></menu>
+
+  <ion-item (click)="logout()" *ngIf="auth.authenticated">
+      <ion-icon name="log-out" item-left></ion-icon>
+      Log out
+    </ion-item>
   
 </ion-content>
