Fixed login page bug
- You can now inimize the app with the back button from the log in screen.

- Included a log out button too.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -22,9 +22,16 @@
 
   <menu></menu>
 
-  <ion-item (click)="logout()" *ngIf="auth.authenticated">
+  
+  <!-- <ion-item class="logoutButton" (click)="logout()" *ngIf="auth.authenticated">
       <ion-icon name="log-out" item-left></ion-icon>
       Log out
-    </ion-item>
+  </ion-item> -->
+
+  <button class="logout" ion-button icon-left block clear (click)="logout()">
+    <ion-icon name="log-out"></ion-icon>
+    Log out
+  </button>
+  
   
 </ion-content>
