--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,6 +1,12 @@
 <ion-header>
-    <ion-title>Log in</ion-title>
-    </ion-header>
+  <ion-navbar>
+    <ion-title>
+      Log in
+    </ion-title>
+    
+  </ion-navbar>
+  
+</ion-header>
     
     <ion-content>
       <form (ngSubmit)="login()" [formGroup]="loginForm">
