Revert "Build android 0.0.7"
This reverts commit 882aa15be608dbeafb2743fc2dcd229ae50c53e6.

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,12 +1,6 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Log in
-    </ion-title>
-    
-  </ion-navbar>
-  
-</ion-header>
+    <ion-title>Log in</ion-title>
+    </ion-header>
     
     <ion-content>
       <form (ngSubmit)="login()" [formGroup]="loginForm">
